Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28682

Wrong .exe manifests are embedded in Qt5Cored.dll

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.1
    • 5.0.0 RC 1
    • Build tools: qmake
    • None
    • qt-everywhere-opensource-src-5.0.0-386.7z
      Windows 7
    • cdff53cda858fbf9e4e9b909805132f5033b5165

    Description

      Qt5Cored.dll should have the "dll manifest".
      It seems to have the exe manifest instead.

      Release build (Qt5Core.dll) is fine.

      Output of Manifest Tool:

      T:\packages\qt-everywhere-opensource-src-5.0.0-386\qtbase\bin> mt '-inputresource:Qt5Core.dll;#1' -out:extracted.manifest
      Microsoft (R) Manifest Tool version 6.1.7716.0
      Copyright (c) Microsoft Corporation 2009.
      All rights reserved.
      mt.exe : general error c101008c: Failed to read the manifest from the resource of file "Qt5Core.dll". The specified resource name cannot be found in the image file.
      T:\packages\qt-everywhere-opensource-src-5.0.0-386\qtbase\bin> mt '-inputresource:Qt5Core.dll;#2' -out:extracted.manifest
      Microsoft (R) Manifest Tool version 6.1.7716.0
      Copyright (c) Microsoft Corporation 2009.
      All rights reserved.
      T:\packages\qt-everywhere-opensource-src-5.0.0-386\qtbase\bin> mt '-inputresource:Qt5Cored.dll;#1' -out:extracted.manifest
      Microsoft (R) Manifest Tool version 6.1.7716.0
      Copyright (c) Microsoft Corporation 2009.
      All rights reserved.
      T:\packages\qt-everywhere-opensource-src-5.0.0-386\qtbase\bin> mt '-inputresource:Qt5Cored.dll;#2' -out:extracted.manifest
      Microsoft (R) Manifest Tool version 6.1.7716.0
      Copyright (c) Microsoft Corporation 2009.
      All rights reserved.
      mt.exe : general error c101008c: Failed to read the manifest from the resource of file "Qt5Cored.dll". The specified resource name cannot be found in the image file.
      T:\packages\qt-everywhere-opensource-src-5.0.0-386\qtbase\bin>
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jbornema Joerg Bornemann
              smd Jan Arve
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes