fix DLL manifest resource ids for debug builds

The resource id must be 2 for DLLs. This was broken for the
"debug with incremental linking" case.

Task-number: QTBUG-28682
Task-number: QTBUG-28683
Change-Id: Id8c48a1dec30e341de949213c63c1c9b73956dac
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>

cregit: cdff53cda858fbf9e4e9b909805132f5033b5165 https://github.com/qt/qtbase/commit/cdff53cda858fbf9e4e9b909805132f5033b5165